--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -25,6 +25,9 @@
   "active": {
     "message": "Active"
   },
+  "activities": {
+    "message": "Activities"
+  },
   "ad_blocking": {
     "message": "Ad-Blocking"
   },
@@ -106,10 +109,6 @@
   "blocked___tracker_list": {
     "message": "Blocked",
     "description": "Plural form - list of blocked trackers"
-  },
-  "blocked__@_0_": {
-    "message": "Blocked: $${0}",
-    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
     "message": "Blocked on all websites"
@@ -626,10 +625,6 @@
   "trusted___tracker_list": {
     "message": "Trusted",
     "description": "Plural form - list of trusted trackers"
-  },
-  "trusted__@_0_": {
-    "message": "Trusted: $${0}",
-    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
     "message": "Trusted on all websites"
